			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2706 2004/12/14 05:11:20 jinmei Exp $

<200412>
2004-12-09  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/net/{if_stf.c, if_ist.c}: added a per-I/F timer to
	refresh a (possibly) stale cached route towards the tunnel end.
	(same as the fix to in_gif.c at Oct 23 2001)

2004-12-09  MOMOSE, Tsuyoshi  <momose@az.jp.nec.com>
	* Mobile IPv6 codes are entirly changed. Most of codes are
	moved to userland from kernel. And now it also supports NEMO
	basic. It works on FreeBSD4, FreeBSD5 and NetBSD.

Thu Dec  9 12:55:19 JST 2004 <sakane@tanu.org>
	* kame/kame/racoon/ipsec_doi.c:
	In main mode with pre-shared key, the address type is only allowed
	in the Interop consensus.  however Cisco PIX uses the FQDN type often.
	so the FQDN type is allowed as the phase1 ID.

2004-12-07  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (getaddrinfo): fixed missing
	initialization of the addrconfig structure.  KAME snaps since
	20041129 must be upgraded to apply this fix.

2004-12-07  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c: synchronized with FreeBSD5.3's
	getaddrinfo implementation:
	- ensure thread-safeness
	- use nsswitch.conf instead of host.conf

2004-12-03  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/lib/libinet6/res_send.c (res_send): made sure this
	function return a valid value.

2004-12-03  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/common.c: silenced strict-aliasing warnings.
	Otherwise dhcp6 could not be built with -O2 on FreeBSD 5.3.
	(KAME-PR 851)

2004-12-02  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/config.c (configure_commit): corrected list
	management operation.  (mostly harmless, but it was incorrect.)
	From: Nicolas Dichtel

2004-12-02  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/lib/libinet6: imported some res_* files and related