@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2706 2004/12/14 05:11:20 jinmei Exp $
+$KAME: CHANGELOG,v 1.2707 2004/12/27 11:45:03 suz Exp $
 
 <200412>
+2004-12-27  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
+	* kame/sys/netinet6/mldv2.c: corrected an MLD-query handling
+	  when MaxResponseDelay=0.  (ToDo. Same thing for IGMPv3)
+
 2004-12-09  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
 	* kame/sys/net/{if_stf.c, if_ist.c}: added a per-I/F timer to
 	refresh a (possibly) stale cached route towards the tunnel end.
